--- a/resto/shop_account.html
+++ b/resto/shop_account.html
@@ -71,7 +71,7 @@
                             </div>
                     </li>
                     <li style="margin-right: 10px;margin-top: 20px;"><input 
-                            class="btn btn-default" value="Se Connecter"></li>
+                            class="btn btn-default" value="Se Connecter" onclick="connexResto()"></li>
 
 
 
