save main js link

--- a/projet/shop_cart.html
+++ b/projet/shop_cart.html
@@ -11,6 +11,7 @@
 <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
 
 <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script><link rel="shortcut icon" href="img/favicon.ico">
+<script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\projet\js\main1.js"></script>
 
 <meta name="viewport" content="width=device-width">
 
