--- a/projet/inscription.html
+++ b/projet/inscription.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script src="js/main1.js"></script>
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\projet\js\main1.js"></script>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
