--- a/AdminLTE/index2.html
+++ b/AdminLTE/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-test
+
 <!-- Mirrored from adminlte.io/themes/AdminLTE/index2.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Dec 2019 19:28:41 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -39,7 +39,7 @@ test
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini" onload="admin_connected_verif() ">
     <div class="wrapper">
 
         <header class="main-header">
@@ -177,7 +177,7 @@ test
                     Dashboard
 
                 </h1>
-                <ol class="breadcrumb">
+                <ol class="breadcrumb" id="connexsectionadmin">
                     <li><a href="index2.html"><i class="fa fa-dashboard"></i> Home</a></li>
 
                 </ol>
