--- a/AdminLTE/pages/examples/gestion-category1.html
+++ b/AdminLTE/pages/examples/gestion-category1.html
@@ -20,7 +20,7 @@
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
-  <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\projet\js\main1.js"></script>
+  <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +32,7 @@
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini" onload="admin_connected_verif()">
 <!-- Site wrapper -->
 <div class="wrapper">
 
@@ -171,8 +171,8 @@
         Dashboard
        
       </h1>
-      <ol class="breadcrumb">
-        <li><a href="\adminlte.io\themes\AdminLTE\index2.html"><i class="fa fa-dashboard"></i> Home</a></li>
+      <ol class="breadcrumb" id="connexsectionadmin">
+        <li><a href="file:///C:/Users/Asus/Desktop/Nouveau%20dossier%20(3)/adminlte.io/themes/AdminLTE/index2.html"><i class="fa fa-dashboard"></i> Home</a></li>
         
       </ol>
     </section>
@@ -181,6 +181,7 @@
     <!-- Main content -->
  
       <!-- Default box -->
+      <br>
       <div class="box">
         <div class="box-header with-border">
           <h3 class="box-title">Add Category</h3>
