--- a/projet/inscription.html
+++ b/projet/inscription.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\projet\js\main1.js"></script>
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -80,8 +80,8 @@
                                             <div class="row">
                                                 <div class="form-group">
                                                     <div class="col-md-12">
-                                                        <label>Username or E-mail Address</label>
-                                                        <input type="text" value="" class="form-control">
+                                                        <label>E-mail Address</label>
+                                                        <input type="text" value="" class="form-control" id="UserEmail">
                                                     </div>
                                                 </div>
                                             </div>
@@ -91,23 +91,22 @@
                                                     <div class="col-md-12">
                                                         <a class="pull-right" href="index-2.html">(Lost Password?)</a>
                                                         <label>Password</label>
-                                                        <input type="password" value="" class="form-control">
+                                                        <input type="password" value="" class="form-control" id="UserPassword">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="clearfix"></div>
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <span class="remember-box checkbox">
+                                                    
                                                         <label for="rememberme">
-                                                            <input type="checkbox" id="rememberme"
-                                                                name="rememberme">Remember Me
+                                                           
                                                         </label>
                                                     </span>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <button type="submit"
-                                                        class="btn btn-default pull-right">Login</button>
+                                                    <input 
+                                                        class="btn btn-default pull-right" value="Login" onclick="connexUser()">
                                                 </div>
                                             </div>
                                         </form>
