--- a/projet/shop_cart.html
+++ b/projet/shop_cart.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
 
 <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script><link rel="shortcut icon" href="img/favicon.ico">
-<script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\projet\js\main1.js"></script>
+<script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
 
 <meta name="viewport" content="width=device-width">
 
@@ -23,7 +23,7 @@
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
 </head>
-<body>
+<body onload="user_connected_verif();user_connected_verifPannier()"  >
 <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -51,64 +51,10 @@
         
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" id="connexsection">
 
 
 
-                <li style="margin-right: 10px;" id="connexsection">
-                    <div class="form-group">
-                        Email address
-                        <input type="email" class="form-control" id="exampleInputEmail1"
-                            placeholder="Email"> </div>
-                </li>
-
-                <li style="margin-right: 10px;" id="connexsection"> 
-                    <div class="form-group"> Password
-                        <input type="password" class="form-control" id="exampleInputPassword1"
-                            placeholder="Password">
-                            <a href="shop_account.html" style="color: white;">S'inscrire</a>
-                        </div>
-                </li>
-           
-                <li style="margin-right: 10px;margin-top: 20px;" id="connexsection"><button type="submit"
-                        class="btn btn-default">Submit</button></li>
-
-                        <li class="dropdown" id="cartdisplay" >
-                            <a class="css-pointer dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-shopping-cart fsc pull-left"></i><span class="cart-number">3</span><span class="caret"></span></a>
-                            <div class="cart-content dropdown-menu">
-                            <div class="cart-title">
-                            <h4>Shopping Cart</h4>
-                            </div>
-                            <div class="cart-items">
-                            <div class="cart-item clearfix">
-                            <div class="cart-item-image">
-                            <a href="shop_single_full.html"><img src="img/cart-img1.jpg" alt="Breakfast with coffee"></a>
-                            </div>
-                            <div class="cart-item-desc">
-                            <a href="shop_single_full.html">Breakfast with coffee</a>
-                            <span class="cart-item-price">$19.99</span>
-                            <span class="cart-item-quantity">x 2</span>
-                            <i class="fa fa-times ci-close"></i>
-                            </div>
-                            </div>
-                            <div class="cart-item clearfix">
-                            <div class="cart-item-image">
-                            <a href="shop_single_full.html"><img src="img/cart-img2.jpg" alt="Chicken stew"></a>
-                            </div>
-                            <div class="cart-item-desc">
-                            <a href="shop_single_full.html">Chicken stew</a>
-                            <span class="cart-item-price">$24.99</span>
-                            <span class="cart-item-quantity">x 3</span>
-                             <i class="fa fa-times ci-close"></i>
-                            </div>
-                            </div>
-                            </div>
-                            <div class="cart-action clearfix">
-                            <span class="pull-left checkout-price">$ 114.95</span>
-                            <a class="btn btn-default pull-right" href="shop_cart.html">View Cart</a>
-                            </div>
-                            </div>
-                            </li>
 
             </ul>
         </div>
