--- a/resto/contact.html
+++ b/resto/contact.html
@@ -23,7 +23,7 @@
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
 </head>
-<body>
+<body onload="RestoConnectedVerif()">
 <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -75,6 +75,7 @@
         
         
         <li><a href="contact.html">Contact</a></li>
+        <li id="connexResto" style="margin-top: 10px; "></li>
         </ul>
 </div>
 
