--- a/resto/menu-cons.html
+++ b/resto/menu-cons.html
@@ -10,6 +10,7 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
 
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -26,7 +27,7 @@
         <![endif]-->
 </head>
 
-<body>
+<body onload="RestoConnectedVerif()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -79,6 +80,7 @@
 
 
                             <li><a href="contact.html">Contact</a></li>
+                            <li id="connexResto" style="margin-top: 10px; "></li>
                         </ul>
                     </div>
 
