--- a/resto/menu.html
+++ b/resto/menu.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
 
 
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
@@ -28,7 +29,7 @@
         <![endif]-->
 </head>
 
-<body>
+<body onload="RestoConnectedVerif()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -81,6 +82,7 @@
 
 
                             <li><a href="contact.html">Contact</a></li>
+                            <li id="connexResto" style="margin-top: 10px; "></li>
                         </ul>
                     </div>
 
