as an resto can delete pub& edit pub

--- a/resto/pub-cons.html
+++ b/resto/pub-cons.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="css/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" href="css/plugin.css">
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="C:\Users\Asus\Desktop\fivepoint html+css\JS\style1.css">
 <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
@@ -94,7 +95,7 @@
 </section>
 <br>
 <br>
-<section class="reservation">
+<section class="reservation" style=" min-height: 240px;">
 <div class="container">
 
         <div class="row">
@@ -103,11 +104,20 @@
                    
                     </table>
 
+               
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+            <div class="dropdown">
+                <div id="editpub" class="dropdown-content">
+                </div>
 
-
+            </div>
+        </div>
+    </div>
 </div>
+
 </section>
 
 
