--- a/resto/menu-cons.html
+++ b/resto/menu-cons.html
@@ -10,9 +10,9 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
+    <!-- <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script> -->
 
-    <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
+    <!-- <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script> -->
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style2.css" />
 
@@ -25,9 +25,11 @@
     <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
+    <script src="js/mainMenu.js"></script>
+
 </head>
 
-<body onload="RestoConnectedVerif()">
+<body onload="AfficherMenu();RestoConnectedVerif()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -104,99 +106,12 @@
                         <div class="col-md-12">
                             <h2>Menu</h2>
                             <hr class="hr1">
-                            <table class="tabMenu">
-                                <tr>
-                                    <th>Nos Sandwish</th>
-                                    <th>prix</th>
-                                    <th>Ajouter au pannier</th>
-                                    <th>Makloub</th>
-                                    <th>Prix</th>
-                                    <th>Ajouter au pannier</th>
-                                    <th>Libanais</th>
-                                    <th>Prix</th>
-                                    <th>Ajouter au pannier</th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
+                            <table class="tabMenu" id="TableauMenu">
 
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-                                <tr>
-                                    <th>Nos Plat</th>
-                                    <th>Prix</th>
-                                    <th>Ajouter au pannier</th>
-                                    <th>Nos Salades</th>
-                                    <th>Prix</th>
-                                    <th>Ajouter au pannier</th>
-                                    <th>Nos Pizzas</th>
-                                    <th>Prix</th>
-                                    <th>Ajouter au pannier</th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
+                            </table><br><br>
+                            <div id="modifier">
 
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><button class="btnSupMenu">Supprimer</button><button class="btnEditMenu">Editer</button></td>
-                                </tr>
-
-                            </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -304,7 +219,7 @@
     </div>
 
 
-    <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <!-- <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script> -->
     <script src="js/vendor/jquery-1.11.2.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/jquery.flexslider-min.js"></script>
