as an admin can block  edit delete resto

--- a/AdminLTE/pages/examples/gestion-cpt1.html
+++ b/AdminLTE/pages/examples/gestion-cpt1.html
@@ -32,7 +32,7 @@
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition skin-blue sidebar-mini" onload="admin_connected_verif()">
+<body class="hold-transition skin-blue sidebar-mini" onload="admin_connected_verif();EditerRestoAdmin()">
 <!-- Site wrapper -->
 <div class="wrapper">
 
@@ -202,6 +202,17 @@
                     </button>
                   </span>
             </div>
+          </form>
+        </div>
+        <div class="box box-info">
+          <div class="box-header with-border">
+            <h3 class="box-title">Horizontal Form</h3>
+          </div>
+          <!-- /.box-header -->
+          <!-- form start -->
+          <form class="form-horizontal" id="editerRestoAdmin">
+            
+            <!-- /.box-footer -->
           </form>
         </div>
         <!-- /.box-body -->
