--- a/resto/pub.html
+++ b/resto/pub.html
@@ -10,11 +10,12 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
+    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script
-        src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
 
     <meta name="viewport" content="width=device-width">
 
@@ -43,8 +44,7 @@
             <nav class="navbar navbar-fixed-top">
                 <div class="container">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -59,8 +59,7 @@
 
                             <li><a href="home.html">Home</a></li>
                             <li class="dropdown">
-                                <a href="pub.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Publication<span
+                                <a href="pub.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Publication<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="pub.html">Ajouter Publication</a>
@@ -70,8 +69,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="menu.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
+                                <a href="menu.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="menu.html">Ajouter Menu</a></li>
                                     <li><a href="menu-cons.html">Consulter Menu</a>
@@ -149,8 +147,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <label>Description</label>
-                                        <textarea type="text" class="form-control" rows="3" maxlength="200"
-                                            id="pubdescription"></textarea>
+                                        <textarea type="text" class="form-control" rows="3" maxlength="200" id="pubdescription"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -158,9 +155,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="space20"></div>
-                                    <input type="submit" class="btn btn-default pull-right"
-                                        style="width: 200px; margin-top: 20px; margin-bottom: 20px; " value="Ajouter"
-                                        onclick="addpublication()">
+                                    <input type="submit" class="btn btn-default pull-right" style="width: 200px; margin-top: 20px; margin-bottom: 20px; " value="Ajouter" onclick="addpublication()">
                                 </div>
                             </div>
 
@@ -170,7 +165,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <table class="table" id="tableauPub">
-                               
+
                                 </table>
 
                             </div>
@@ -194,10 +189,7 @@
                             <div class="row">
                                 <div class="col-md-6 col-sm-12">
                                     <h1>About us</h1>
-                                    <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem.
-                                        Etiam massa libero, auctor vitae egestas et, accumsan
-                                        quis nunc.Duis leo justo, condimentum at purus eu,
-                                        posuere pretium tellus.</p>
+                                    <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem. Etiam massa libero, auctor vitae egestas et, accumsan quis nunc.Duis leo justo, condimentum at purus eu, posuere pretium tellus.</p>
                                     <a href="about.html">Read more &rarr;</a>
                                 </div>
 
@@ -227,13 +219,9 @@
                                         </a>
                                     </div>
                                     <div class="footer-address">
-                                        <p><i class="fa fa-map-marker"></i>28 Seventh Avenue,
-                                            Neew York, 10014</p>
+                                        <p><i class="fa fa-map-marker"></i>28 Seventh Avenue, Neew York, 10014</p>
                                         <p><i class="fa fa-phone"></i>Phone: (415) 124-5678</p>
-                                        <p><i class="fa fa-envelope-o"></i><a
-                                                href="https://demo.web3canvas.com/cdn-cgi/l/email-protection"
-                                                class="__cf_email__"
-                                                data-cfemail="55262025253a27211527302621342027343b217b363a38">[email&#160;protected]</a>
+                                        <p><i class="fa fa-envelope-o"></i><a href="https://demo.web3canvas.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="55262025253a27211527302621342027343b217b363a38">[email&#160;protected]</a>
                                         </p>
                                     </div>
                                 </div>
@@ -244,9 +232,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <p><i class="fa fa-copyright"></i> 2015.Tomato.All
-                                            rights reserved. Designed with <i class="fa fa-heart primary-color"></i>
-                                            by Surjithctly</p>
+                                        <p><i class="fa fa-copyright"></i> 2015.Tomato.All rights reserved. Designed with <i class="fa fa-heart primary-color"></i> by Surjithctly</p>
                                     </div>
                                 </div>
                             </div>
