--- a/projet/home.html
+++ b/projet/home.html
@@ -10,7 +10,9 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
+    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
     <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
@@ -26,7 +28,7 @@
         <![endif]-->
 </head>
 
-<body  onload="user_connected_verif();AfficherCatInscri()">
+<body onload="user_connected_verif();AfficherCatInscri()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -42,7 +44,7 @@
             <nav class="navbar navbar-fixed-top">
                 <div class="container">
                     <div class="navbar-header">
-                     
+
                         <a class="navbar-brand" href="index-2.html">
                             <img src="img/nav-logo.png" alt="nav-logo">
                         </a>
@@ -81,8 +83,7 @@
                     <div class="row">
                         <div class="col-md-4">
 
-                            <select class="form-control"
-                                style="margin-top: 10px;margin-bottom: 20px;">
+                            <select class="form-control" style="margin-top: 10px;margin-bottom: 20px;">
                                 <option selected>selectionner votre ville</option>
                                 <option value="1">Tunis</option>
                                 <option value="2">Ariana</option>
@@ -113,8 +114,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -129,8 +129,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -145,8 +144,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -161,8 +159,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -180,8 +177,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -196,8 +192,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -212,8 +207,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -228,8 +222,7 @@
                                     <span class="fa fa-star active"></span>
                                     <span class="fa fa-star active"></span>
                                 </div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum has been the industry's standard.</p>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <a href="recipe_detail-image.html" class="btn btn-default">View Details</a>
                             </div>
                         </div>
@@ -244,9 +237,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             <h1>About us</h1>
-                            <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem. Etiam massa libero, auctor
-                                vitae egestas et, accumsan quis nunc.Duis leo justo, condimentum at purus eu, posuere
-                                pretium tellus.</p>
+                            <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem. Etiam massa libero, auctor vitae egestas et, accumsan quis nunc.Duis leo justo, condimentum at purus eu, posuere pretium tellus.</p>
                             <a href="about.html">Read more &rarr;</a>
                         </div>
 
@@ -278,10 +269,7 @@
                             <div class="footer-address">
                                 <p><i class="fa fa-map-marker"></i>28 Lac 2 Ariana, Tunisia, 10014</p>
                                 <p><i class="fa fa-phone"></i>Phone: (216) 24 658 683</p>
-                                <p><i class="fa fa-envelope-o"></i><a
-                                        href="https://demo.web3canvas.com/cdn-cgi/l/email-protection"
-                                        class="__cf_email__"
-                                        data-cfemail="582b2d2828372a2c182a3d2b2c392d2a39362c763b3735">[email&#160;protected]</a>
+                                <p><i class="fa fa-envelope-o"></i><a href="https://demo.web3canvas.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="582b2d2828372a2c182a3d2b2c392d2a39362c763b3735">[email&#160;protected]</a>
                                 </p>
                             </div>
                         </div>
@@ -292,8 +280,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p><i class="fa fa-copyright"></i> 2019.H&N.All rights reserved. Designed with <i
-                                        class="fa fa-heart primary-color"></i> by FivePoints Talent</p>
+                                <p><i class="fa fa-copyright"></i> 2019.H&N.All rights reserved. Designed with <i class="fa fa-heart primary-color"></i> by FivePoints Talent</p>
                             </div>
                         </div>
                     </div>
