--- a/projet/inscription.html
+++ b/projet/inscription.html
@@ -10,7 +10,9 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
+    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
     <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <meta name="viewport" content="width=device-width">
@@ -98,15 +100,14 @@
                                             <div class="clearfix"></div>
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    
-                                                        <label for="rememberme">
+
+                                                    <label for="rememberme">
                                                            
                                                         </label>
                                                     </span>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <input 
-                                                        class="btn btn-default pull-right" value="Login" onclick="connexUser()">
+                                                    <input class="btn btn-default pull-right" value="Login" onclick="connexUser()">
                                                 </div>
                                             </div>
                                         </form>
@@ -121,8 +122,7 @@
                                                 <div class="form-group">
                                                     <div class="col-md-12">
                                                         <label>E-mail Address</label>
-                                                        <input type="text" value="" class="form-control"
-                                                            id="email-user">
+                                                        <input type="text" value="" class="form-control" id="email-user">
                                                     </div>
                                                 </div>
                                             </div>
@@ -148,21 +148,18 @@
                                                 <div class="form-group">
                                                     <div class="col-md-6">
                                                         <label>Password</label>
-                                                        <input type="password" value="" class="form-control"
-                                                            id="pwd-user">
+                                                        <input type="password" value="" class="form-control" id="pwd-user">
                                                     </div>
                                                     <div class="col-md-6">
                                                         <label>Re-enter Password</label>
-                                                        <input type="password" value="" class="form-control"
-                                                            id="cpwd-user">
+                                                        <input type="password" value="" class="form-control" id="cpwd-user">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="space20"></div>
-                                                    <input class="btn btn-default pull-right"
-                                                        onclick="registerUser()" value='Register'>
+                                                    <input class="btn btn-default pull-right" onclick="registerUser()" value='Register'>
                                                 </div>
                                             </div>
                                         </form>
@@ -181,9 +178,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             <h1>About us</h1>
-                            <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem. Etiam massa libero, auctor
-                                vitae egestas et, accumsan quis nunc.Duis leo justo, condimentum at purus eu, posuere
-                                pretium tellus.</p>
+                            <p>Duis leo justo, condimentum at purus eu,Aenean sed dolor sem. Etiam massa libero, auctor vitae egestas et, accumsan quis nunc.Duis leo justo, condimentum at purus eu, posuere pretium tellus.</p>
                             <a href="about.html">Read more &rarr;</a>
                         </div>
 
@@ -215,10 +210,7 @@
                             <div class="footer-address">
                                 <p><i class="fa fa-map-marker"></i>28 Lac 2 Ariana, Tunisia, 10014</p>
                                 <p><i class="fa fa-phone"></i>Phone: (216) 24 658 683</p>
-                                <p><i class="fa fa-envelope-o"></i><a
-                                        href="https://demo.web3canvas.com/cdn-cgi/l/email-protection"
-                                        class="__cf_email__"
-                                        data-cfemail="582b2d2828372a2c182a3d2b2c392d2a39362c763b3735">[email&#160;protected]</a>
+                                <p><i class="fa fa-envelope-o"></i><a href="https://demo.web3canvas.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="582b2d2828372a2c182a3d2b2c392d2a39362c763b3735">[email&#160;protected]</a>
                                 </p>
                             </div>
                         </div>
@@ -229,80 +221,79 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p><i class="fa fa-copyright"></i> 2019.H&N.All rights reserved. Designed with <i
-                                        class="fa fa-heart primary-color"></i> by FivePoints Talent</p>
+                                <p><i class="fa fa-copyright"></i> 2019.H&N.All rights reserved. Designed with <i class="fa fa-heart primary-color"></i> by FivePoints Talent</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            </div>
         </div>
-    </div>
 
-    <div class="b-settings-panel">
-        <div class="settings-section">
-            <span>
+        <div class="b-settings-panel">
+            <div class="settings-section">
+                <span>
                 Boxed
             </span>
-            <div class="b-switch">
-                <div class="switch-handle"></div>
-            </div>
-            <span>
+                <div class="b-switch">
+                    <div class="switch-handle"></div>
+                </div>
+                <span>
                 Wide
             </span>
+            </div>
+            <hr class="dashed" style="margin: 15px 0px;">
+            <h5>Main Background</h5>
+            <div class="settings-section bg-list">
+                <div class="bg-wood_pattern"></div>
+                <div class="bg-shattered"></div>
+                <div class="bg-vichy"></div>
+                <div class="bg-random-grey-variations"></div>
+                <div class="bg-irongrip"></div>
+                <div class="bg-gplaypattern"></div>
+                <div class="bg-diamond_upholstery"></div>
+                <div class="bg-denim"></div>
+                <div class="bg-crissXcross"></div>
+                <div class="bg-climpek"></div>
+            </div>
+            <hr class="dashed" style="margin: 15px 0px;">
+            <h5>Color Scheme</h5>
+            <div class="settings-section color-list">
+                <div data-src="css/themes/blue.css" style="background: #45b5f5"></div>
+                <div data-src="css/themes/brown.css" style="background: #dc8068"></div>
+                <div data-src="css/themes/cyan.css" style="background: #00becc"></div>
+                <div data-src="css/themes/green.css" style="background: #5bb75b"></div>
+                <div data-src="css/themes/orange.css" style="background: #ff7149"></div>
+                <div data-src="css/themes/pink.css" style="background: #fba1a1"></div>
+                <div data-src="css/themes/red.css" style="background: #dc3522"></div>
+                <div data-src="css/themes/yellow.css" style="background: #fdb813"></div>
+            </div>
+            <a data-src="css/style.css" class="reset"><span class="bg-wood_pattern">Reset</span></a>
+            <div class="btn-settings"></div>
         </div>
-        <hr class="dashed" style="margin: 15px 0px;">
-        <h5>Main Background</h5>
-        <div class="settings-section bg-list">
-            <div class="bg-wood_pattern"></div>
-            <div class="bg-shattered"></div>
-            <div class="bg-vichy"></div>
-            <div class="bg-random-grey-variations"></div>
-            <div class="bg-irongrip"></div>
-            <div class="bg-gplaypattern"></div>
-            <div class="bg-diamond_upholstery"></div>
-            <div class="bg-denim"></div>
-            <div class="bg-crissXcross"></div>
-            <div class="bg-climpek"></div>
-        </div>
-        <hr class="dashed" style="margin: 15px 0px;">
-        <h5>Color Scheme</h5>
-        <div class="settings-section color-list">
-            <div data-src="css/themes/blue.css" style="background: #45b5f5"></div>
-            <div data-src="css/themes/brown.css" style="background: #dc8068"></div>
-            <div data-src="css/themes/cyan.css" style="background: #00becc"></div>
-            <div data-src="css/themes/green.css" style="background: #5bb75b"></div>
-            <div data-src="css/themes/orange.css" style="background: #ff7149"></div>
-            <div data-src="css/themes/pink.css" style="background: #fba1a1"></div>
-            <div data-src="css/themes/red.css" style="background: #dc3522"></div>
-            <div data-src="css/themes/yellow.css" style="background: #fdb813"></div>
-        </div>
-        <a data-src="css/style.css" class="reset"><span class="bg-wood_pattern">Reset</span></a>
-        <div class="btn-settings"></div>
-    </div>
 
 
-    <script src="js/vendor/jquery-1.11.2.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/vendor/jquery.flexslider-min.js"></script>
-    <script src="js/vendor/spectragram.js"></script>
-    <script src="js/vendor/owl.carousel.min.js"></script>
-    <script src="js/vendor/velocity.min.js"></script>
-    <script src="js/vendor/velocity.ui.min.js"></script>
-    <script src="js/vendor/bootstrap-datepicker.min.js"></script>
-    <script src="js/vendor/bootstrap-clockpicker.min.js"></script>
-    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
-    <script src="js/vendor/isotope.pkgd.min.js"></script>
-    <script src="js/vendor/slick.min.js"></script>
-    <script src="js/vendor/wow.min.js"></script>
-    <script src="js/animation.js"></script>
-    <script src="js/vendor/vegas/vegas.min.js"></script>
-    <script src="js/vendor/jquery.mb.YTPlayer.js"></script>
-    <script src="js/vendor/jquery.stellar.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/vendor/mc/jquery.ketchup.all.min.js"></script>
-    <script src="js/vendor/mc/main.js"></script>
-    <script src="js/main1.js"></script>
+        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/jquery.flexslider-min.js"></script>
+        <script src="js/vendor/spectragram.js"></script>
+        <script src="js/vendor/owl.carousel.min.js"></script>
+        <script src="js/vendor/velocity.min.js"></script>
+        <script src="js/vendor/velocity.ui.min.js"></script>
+        <script src="js/vendor/bootstrap-datepicker.min.js"></script>
+        <script src="js/vendor/bootstrap-clockpicker.min.js"></script>
+        <script src="js/vendor/jquery.magnific-popup.min.js"></script>
+        <script src="js/vendor/isotope.pkgd.min.js"></script>
+        <script src="js/vendor/slick.min.js"></script>
+        <script src="js/vendor/wow.min.js"></script>
+        <script src="js/animation.js"></script>
+        <script src="js/vendor/vegas/vegas.min.js"></script>
+        <script src="js/vendor/jquery.mb.YTPlayer.js"></script>
+        <script src="js/vendor/jquery.stellar.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/vendor/mc/jquery.ketchup.all.min.js"></script>
+        <script src="js/vendor/mc/main.js"></script>
+        <script src="js/main1.js"></script>
 </body>
 
 <!-- Mirrored from demo.web3canvas.com/themeforest/tomato/shop_account.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Dec 2019 19:30:45 GMT -->
