--- a/resto/menu-cons.html
+++ b/resto/menu-cons.html
@@ -10,9 +10,10 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
-    <!-- <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script> -->
+    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
-    <!-- <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script> -->
+    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
+    <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style2.css" />
 
@@ -29,7 +30,7 @@
 
 </head>
 
-<body onload="AfficherMenu();RestoConnectedVerif()">
+<body onload="RestoConnectedVerif();AfficherMenu()">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
