--- a/AdminLTE/pages/examples/gestion-cpt1.html
+++ b/AdminLTE/pages/examples/gestion-cpt1.html
@@ -24,10 +24,8 @@
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
-    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
-
+    <script src="js\main1.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -199,17 +197,18 @@
               <i class="fa fa-times"></i></button>
                         </div>
                     </div>
-                    <div class="box-body">
-                        <form action="#" method="get" class="sidebar-form">
-                            <div class="input-group">
-                                <input type="text" name="q" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                    <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                    </button>
-                  </span>
-                            </div>
+                    
+                    <div class="box box-info">
+                        <div class="box-header with-border">
+                          <h3 class="box-title"></h3>
+                        </div>
+                        <!-- /.box-header -->
+                        <!-- form start -->
+                        <form class="form-horizontal" id="editerRestoAdmin">
+              
+                          <!-- /.box-footer -->
                         </form>
-                    </div>
+                      </div>
                     <!-- /.box-body -->
                     <div class="box-footer">
 
