--- a/resto/cmd.html
+++ b/resto/cmd.html
@@ -10,10 +10,7 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
-    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
-
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
+    <script src="..\AdminLTE\pages\examples\js\main1.js"></script>
     <script src="../../cdn-cgi/apps/head/-mEFVS8y7qx5pVzWHQTCQu5gnVM.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
 
