--- a/AdminLTE/pages/examples/gestion-category.html
+++ b/AdminLTE/pages/examples/gestion-category.html
@@ -25,10 +25,8 @@
     <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css">
 
 
-    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
 
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
-
+    <script src="js\main1.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
