--- a/projet/inscription.html
+++ b/projet/inscription.html
@@ -10,11 +10,9 @@
 
     <meta name="description" content="Tomato is a Responsive HTML5 Template for Restaurants and food related services.">
     <meta name="keywords" content="tomato, responsive, html5, restaurant, template, food, reservation">
-    <script src="D:\Hatem\Nouveau dossier (4)\H-N-Resto\AdminLTE\pages\examples\js\main1.js"></script>
-
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
+    
+    <script src="..\AdminLTE\pages\examples\js\main1.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <script src="C:\Users\Asus\Desktop\Nouveau dossier (3)\adminlte.io\themes\AdminLTE\pages\examples\js\main1.js"></script>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
