AsAdmin Add Delet Affich Edit Category

--- a/AdminLTE/pages/examples/gestion-category.html
+++ b/AdminLTE/pages/examples/gestion-category.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini" onload="admin_connected_verif()">
+<body class="hold-transition skin-blue sidebar-mini" onload="modifierC();admin_connected_verif()">
     <!-- Site wrapper -->
     <div class="wrapper">
 
@@ -205,65 +205,12 @@
                             </div>
                             <!-- /.box-header -->
                             <div class="box-body">
-                                <table id="example1" class="table table-bordered table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>category</th>
-                                            <th>Nombre resto</th>
+                                <table id="tabCat" class="table table-bordered table-striped">
 
-                                        </tr>
-
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>fast food</td>
-                                            <td>20
-                                            </td>
-                                        </tr>
-
-                                    </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <th>category</th>
-                                            <th>Nombre resto</th>
-                                        </tr>
-                                    </tfoot>
                                 </table>
+                                <div id="editCat">
+
+                                </div>
                             </div>
                             <!-- /.box-body -->
                         </div>
