--- a/AdminLTE/pages/examples/gestion-category1.html
+++ b/AdminLTE/pages/examples/gestion-category1.html
@@ -198,9 +198,9 @@
                     </div>
                 </div>
                 <div class="input-group margin">
-                    <input type="text" class="form-control" id="category-name">
+                    <input type="text" class="form-control" id="categorie">
                     <span class="input-group-btn">
-                <input type="button" class="btn btn-info btn-flat" value="Go!" onclick="AddCat()">
+                <input type="button" class="btn btn-info btn-flat" value="Go!" onclick="Add()">
               </span>
                 </div>
                 <!-- /.box-body -->
